--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,4 +19,12 @@
       {{ isFirstTime ? 'Créer & Accéder' : 'Déverrouiller' }}
     </button>
   </div>
+
+  <div class="absolute bottom-6 left-0 right-0 text-center">
+  <p class="text-white/60 text-sm">
+    © 2025 
+    <span class="text-white font-semibold">Lerusse</span>
+    — Stockage 100 % privé & chiffré
+  </p>
+</div>
 </div>
